--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
             <div class="about-content">
                 <div style="max-width: 800px; margin: 0 auto;">
                     <p style="font-size: 1.1rem; margin-bottom: 20px; text-align: center;">
-                        En <strong>Manos de una Maqueta</strong> creemos que cada cabello es único y merece un cuidado personalizado. Nuestro equipo de especialistas está comprometido con brindar tratamientos que no solo transforman tu cabello, sino que también realzan tu belleza natural.
+                        En <strong>Manos de Ángel</strong> creemos que cada cabello es único y merece un cuidado personalizado. Nuestro equipo de especialistas está comprometido con brindar tratamientos que no solo transforman tu cabello, sino que también realzan tu belleza natural.
                     </p>
                     <p style="font-size: 1.1rem; margin-bottom: 30px; text-align: center;">
                         Con más de 10 años de experiencia en el sector, hemos desarrollado metodologías propias que combinan lo mejor de la tradición con las innovaciones más recientes en cuidado capilar. Utilizamos productos de origen natural y tecnología de vanguardia para garantizar resultados excepcionales.
